update font to fix wrapping issue

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ html, body {
   
   header code {
     color: #D2D9DF;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
   }
  
   a {
@@ -90,11 +90,11 @@ html, body {
   
   @media (max-width: 600px) {
     .container {
-      padding: 0.4rem;
+      padding: 0.5rem;
     }
   
     .footer-inner {
-      padding: 0 0.4rem;
+      padding: 0 0.5rem;
     }
   }
   
